--- a/todolist/template/todolist1.html
+++ b/todolist/template/todolist1.html
@@ -2,24 +2,29 @@
 {% block content %}
 
     <div class="container">
-    <div class="row" id="left">
-        <div class="col-12">
-      <!-- Displaying Add, delete, edited messages -->
-      {% for message in messages %}
-      <div class="alert alert-warning alert-dismissable" role="alert">
-          <button class="close" data-dismiss="alert">
-              <small><sup>x</sup></small></button>
-          {{message }}
-      </div>
-  {% endfor %}
-  <!--End of Displaying Add, delete, edited messages -->
-  </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col-9" id="left1">
         <br>
+
+        <!-- Displaying Add, delete, edited messages -->
+        {% for message in messages %}
+            <div class="alert alert-warning alert-dismissable" role="alert">
+                <button class="close" data-dismiss="alert">
+                    <small><sup>x</sup></small></button>
+                {{message }}
+            </div>
+        {% endfor %}
+        <!--End of Displaying Add, delete, edited messages -->
+
+        <!-- Display ToDos of Given Date -->
+        <div align="right">
+
+                <form method="POST"  action="/">
+                    {% csrf_token %}
+                    <input type="date" name="dates" id="dates">
+                    <button type="submit"  class="btn btn-success">Submit</button>
+                    </form>
+            </div>
+        <!-- End of Display ToDos of Given Date -->
+
 
         <!-- Form to Add new items for today -->
         <form action="/addTodoItem/" method="post" >
@@ -33,99 +38,20 @@
             <br>
         </form>
         <!-- End of Form to Add new items for today -->
-        </div>
 
-        <div class="col-3" id="right1">
-
-            <!-- Display ToDos of Given Date -->
-        <div align="right">
-
-            <form method="POST"  action="/">
-                {% csrf_token %}
-                <input type="date" name="dates" id="dates">&nbsp;
-                <button type="submit"  class="glyphicon glyphicon-ok" id="ok"></button>
-                </form>
-        </div><br><br>
-    <!-- End of Display ToDos of Given Date -->
-
-        </div>
-    </div>
-
-        <div class="row">
-            <div class="col-9" id="left2">
-                <!-- Displaying the List-->
-        {% if dates %}
-        <p align="center" style="font-size:30px;">{{ dates }} List</p>
-        {% else %}
-        <p align="center" style="font-size:30px;">{{ today }} List</p>
-        {% endif %}
-
-               <table class="table table-bordered" >
-
-               {% for i in all_items %}
-                   {% if i.completed %}
-                   <!-- if the task is done -->
-                       <tr class="table-secondary">
-
-                           <td align="center" ><a href="{% url 'edit' i.id %}"><div style="font-size:30px;" align="center"><del> {{i.item}}
-                               <small class="text-muted" style="font-size:13px;">{{ i.date }}</small> </del></div></a></td>
-
-                           <td align="center"><form action="/uncross/{{i.id}}/" method="post" >{% csrf_token  %}
-                            <button type="submit"  class="btn btn-success" >
-                            Uncross</button>
-                           </form></td>
-
-                           <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
-                            <button type="submit"  class="btn btn-success">
-                            <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
-                                </form>
-                           </td>
-                       </tr>
-
-
-                   {% else %}
-                   <!-- if the task is not done -->
-                       <tr>
-                            <td align="center"><a href="{% url 'edit' i.id%}"><div style="font-size:30px;" align="center"> {{i.item}}
-                            <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
-
-                            <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
-                                <button type="submit"  class="btn btn-success" >
-                                Cross Off</button>
-                                </form>
-                            </td>
-
-                           <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
-                                <button type="submit"  class="btn btn-success" >
-                                <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
-                                </form>
-                            </td>
-                        </tr>
-
-                   {% endif %}
-               {% endfor %}
-               </table>
-
-        <!--End of Displaying the List-->
-            </div>
-            <div class="col-3" id="right2">
-                <!-- Button for Adding Future Task, Displaying Future and Pending tasks -->
+        <!-- Button for Adding Future Task, Displaying Future and Pending tasks -->
         <div align="center">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Addfuturetask">
             Add Future Task
-            </button> <br><br>
+            </button>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Pendingtask">
               Pending Tasks
-            </button><br><br>
+            </button>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Futuretask" align="center">
               Future Tasks
-            </button><br><br>
+            </button>
         </div>
         <!--End of Button for Adding Future Task, Displaying Future and Pending tasks -->
-
-
-            </div>
-        </div>
 
 
         <!-- Adding Future task Modal-->
@@ -179,13 +105,13 @@
                                     <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
 
                                     <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
-                                        <button type="submit"  class="btn btn-success" >
+                                        <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
                                         Cross Off</button>
                                         </form>
                                     </td>
 
                                    <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
-                                        <button type="submit"  class="btn btn-success" >
+                                        <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
                                         <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
                                         </form>
                                     </td>
@@ -226,12 +152,12 @@
                                <small class="text-muted" style="font-size:13px;">{{ i.date }}</small> </del></div></a></td>
 
                            <td align="center"><form action="/uncross/{{i.id}}/" method="post" >{% csrf_token  %}
-                            <button type="submit"  class="btn btn-success" >
+                            <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
                             Uncross</button>
                            </form></td>
 
                            <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
-                            <button type="submit"  class="btn btn-success" >
+                            <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
                             <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
                                 </form>
                            </td>
@@ -245,13 +171,13 @@
                             <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
 
                             <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
-                                <button type="submit"  class="btn btn-success" >
+                                <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
                                 Cross Off</button>
                                 </form>
                             </td>
 
                            <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
-                                <button type="submit"  class="btn btn-success" >
+                                <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
                                 <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
                                 </form>
                             </td>
@@ -268,6 +194,62 @@
               </div>
             </div>
         <!-- End of Future Tasks-->
+
+
+        <!-- Displaying the List-->
+        {% if dates %}
+        <p align="center" style="font-size:30px;">{{ dates }} List</p>
+        {% else %}
+        <p align="center" style="font-size:30px;">{{ today }} List</p>
+        {% endif %}
+
+               <table class="table table-bordered" >
+
+               {% for i in all_items %}
+                   {% if i.completed %}
+                   <!-- if the task is done -->
+                       <tr class="table-secondary">
+
+                           <td align="center" ><a href="{% url 'edit' i.id %}"><div style="font-size:30px;" align="center"><del> {{i.item}}
+                               <small class="text-muted" style="font-size:13px;">{{ i.date }}</small> </del></div></a></td>
+
+                           <td align="center"><form action="/uncross/{{i.id}}/" method="post" >{% csrf_token  %}
+                            <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
+                            Uncross</button>
+                           </form></td>
+
+                           <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
+                            <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
+                            <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
+                                </form>
+                           </td>
+                       </tr>
+
+
+                   {% else %}
+                   <!-- if the task is not done -->
+                       <tr>
+                            <td align="center"><a href="{% url 'edit' i.id%}"><div style="font-size:30px;" align="center"> {{i.item}}
+                            <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
+
+                            <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
+                                <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
+                                Cross Off</button>
+                                </form>
+                            </td>
+
+                           <td align="center"><form action="/deleteTodoItem/{{i.id}}/" method="post">{% csrf_token  %}
+                                <button type="submit"  class="btn btn-success" style="height:18px; width:85px;">
+                                <span class="glyphicon glyphicon-remove"></span>&nbsp;Delete</button>
+                                </form>
+                            </td>
+                        </tr>
+
+                   {% endif %}
+               {% endfor %}
+               </table>
+
+        <!--End of Displaying the List-->
 
 
 
