--- a/todolist/template/todolist.html
+++ b/todolist/template/todolist.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <div class="container">
+    <div class="container-fluid">
     <div class="row" id="left">
         <div class="col-12">
       <!-- Displaying Add, delete, edited messages -->
@@ -18,7 +18,7 @@
 
 
     <div class="row">
-      <div class="col-9" id="left1">
+      <div class="col-md-9 col-sm-12" id="left1">
         <br>
 
         <!-- Form to Add new items for today -->
@@ -35,10 +35,10 @@
         <!-- End of Form to Add new items for today -->
         </div>
 
-        <div class="col-3" id="right1">
+        <div class="col-md-3 col-sm-12" id="right1">
 
             <!-- Display ToDos of Given Date -->
-        <div align="right">
+        <div align="center">
 
             <form method="POST"  action="/">
                 {% csrf_token %}
@@ -52,7 +52,7 @@
     </div>
 
         <div class="row">
-            <div class="col-9" id="left2">
+            <div class="col-md-9 col-sm-12" id="left2">
                 <!-- Displaying the List-->
         {% if dates %}
         <p align="center" style="font-size:30px;">{{ dates }} List</p>
@@ -67,8 +67,8 @@
                    <!-- if the task is done -->
                        <tr class="table-secondary">
 
-                           <td align="center" ><a href="{% url 'edit' i.id %}"><div style="font-size:30px;" align="center"><del> {{i.item}}
-                               <small class="text-muted" style="font-size:13px;">{{ i.date }}</small> </del></div></a></td>
+                           <td align="center" ><a href="{% url 'edit' i.id %}"><div class="todo" align="center"><del> {{i.item}}
+                               <small class="text-muted">{{ i.date }}</small> </del></div></a></td>
 
                            <td align="center"><form action="/uncross/{{i.id}}/" method="post" >{% csrf_token  %}
                             <button type="submit"  class="btn btn-success" >
@@ -86,8 +86,8 @@
                    {% else %}
                    <!-- if the task is not done -->
                        <tr>
-                            <td align="center"><a href="{% url 'edit' i.id%}"><div style="font-size:30px;" align="center"> {{i.item}}
-                            <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
+                            <td align="center"><a href="{% url 'edit' i.id%}"><div class="todo" align="center"> {{i.item}}
+                            <small class="text-muted" >{{ i.date }}</small></div></a></td>
 
                             <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
                                 <button type="submit"  class="btn btn-success" >
@@ -108,7 +108,8 @@
 
         <!--End of Displaying the List-->
             </div>
-            <div class="col-3" id="right2">
+
+            <div class="col-md-3 col-sm-12" id="right2">
                 <!-- Button for Adding Future Task, Displaying Future and Pending tasks -->
         <div align="center">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Addfuturetask">
@@ -175,8 +176,8 @@
                 <table class="table table-bordered">
                     {% for i in items %}
                     <tr>
-                                    <td align="center"><a href="{% url 'edit' i.id%}"><div style="font-size:30px;" align="center"> {{i.item}}
-                                    <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
+                                    <td align="center"><a href="{% url 'edit' i.id%}"><div class="todo" align="center"> {{i.item}}
+                                    <small class="text-muted" >{{ i.date }}</small></div></a></td>
 
                                     <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
                                         <button type="submit"  class="btn btn-success" >
@@ -222,8 +223,8 @@
                    <!-- if the task is done -->
                        <tr class="table-secondary">
 
-                           <td align="center" ><a href="{% url 'edit' i.id %}"><div style="font-size:30px;" align="center"><del> {{i.item}}
-                               <small class="text-muted" style="font-size:13px;">{{ i.date }}</small> </del></div></a></td>
+                           <td align="center" ><a href="{% url 'edit' i.id %}"><div class="todo" align="center"><del> {{i.item}}
+                               <small class="text-muted" >{{ i.date }}</small> </del></div></a></td>
 
                            <td align="center"><form action="/uncross/{{i.id}}/" method="post" >{% csrf_token  %}
                             <button type="submit"  class="btn btn-success" >
@@ -241,8 +242,8 @@
                    {% else %}
                    <!-- if the task is not done -->
                        <tr>
-                            <td align="center"><a href="{% url 'edit' i.id%}"><div style="font-size:30px;" align="center"> {{i.item}}
-                            <small class="text-muted" style="font-size:13px;">{{ i.date }}</small></div></a></td>
+                            <td align="center"><a href="{% url 'edit' i.id%}"><div class="todo" align="center"> {{i.item}}
+                            <small class="text-muted" >{{ i.date }}</small></div></a></td>
 
                             <td align="center"><form action="/cross_off/{{i.id}}/" method="post" >{% csrf_token  %}
                                 <button type="submit"  class="btn btn-success" >
